# AD-review

./: .env.example  .gitignore  README.md  main.py  pyproject.toml
.kiro/specs/ad-compliance-review/: .config.kiro  design.md  requirements.md  tasks.md
data/: category_rules.json  keywords.json
docs/: generate_test_data.md  test_data_prompt.md
input/: case01.json  case02.json  case03.json  case04.json  case05.json  case06.json  case07.json  case08.json  case09.json  case10.json
scripts/: build_rag.py  review_reader.py  test_local.py
src/: agent.py  audit_log.py  confidence.py  config.py  models.py  pairing.py  review_queue.py
src/tools/: category.py  consistency.py  keywords.py  rag.py  vision.py
tests/: test_audit_log.py  test_category.py  test_keywords.py  test_models.py  test_pairing.py  test_review_queue.py
