[project]
name = "ad-compliance-review"
version = "0.1.0"
description = "抖音广告虚假宣传审查 Agent Demo"
requires-python = ">=3.10"
dependencies = [
    "langgraph>=0.2.0",
    "langchain-openai>=0.2.0",
    "langchain-core>=0.3.0",
    "chromadb>=0.5.0",
    "python-docx>=1.1.0",
    "python-dotenv>=1.0.0",
    "openai>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "hypothesis>=6.100.0",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends._legacy:_Backend"
